Fix spacing issue in chrome

--- a/src/components/Office/shipmentApprovalPreview.module.scss
+++ b/src/components/Office/shipmentApprovalPreview.module.scss
@@ -51,6 +51,7 @@
     @include u-margin-bottom(4);
   }
   table {
+    margin-bottom: 1.5rem;
     h4 {
       @include u-margin-bottom(2);
     }
